Bug 2006572 - fix  right tab name and icon shift when the Split View is selected r=kcochrane
Differential Revision: https://phabricator.services.mozilla.com/D290286

--- a/browser/themes/shared/tabbrowser/tabs.css
+++ b/browser/themes/shared/tabbrowser/tabs.css
@@ -1379,11 +1379,14 @@ tab-group > tab-split-view-wrapper {
           outline-color: transparent;
         }
       }
-
-      &:last-child {
-        border-inline-start: 1px solid var(--toolbarbutton-icon-fill);
-      }
     }
+  }
+  .tabbrowser-tab:last-child {
+    border-inline-start: 1px solid transparent;
+  }
+
+  &:not([hasactivetab]) .tabbrowser-tab:last-child {
+    border-inline-start-color: var(--toolbarbutton-icon-fill);
   }
 }
 
